<resources>
    <string name="app_name">GitHunt</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repo_name">Repo Name</string>
    <string name="description">Description</string>
    <string name="author">Author</string>
    <string name="search">Search</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="yearly">Yearly</string>
    <string name="search_language">Search Language</string>
    <string name="filter">Filter</string>
    <string name="monthly">Monthly</string>
    <string name="language">Language</string>
    <string name="stars">stars</string>
    <string name="fork">Fork</string>
</resources>
