<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter_list_black_24dp"
        app:showAsAction="ifRoom"/>

    <group
        android:id="@+id/since_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/action_daily"
            android:title="@string/daily"
            android:checked="true"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_weekly"
            android:title="@string/weekly"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_monthly"
            android:title="@string/monthly"
            app:showAsAction="never"/>


    </group>


</menu>